@@ -24,6 +24,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #10404: Use ctl-button-1 on OSX for the context menu in Idle.
+
 - Issue #4188: Avoid creating dummy thread objects when logging operations
   from the threading module (with the internal verbose flag activated).
 
